--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box ;
+}
+
+html{
+/*  background: #536872;*/
+  background-color: #BFBFBF;
+}
+
 .App {
+  width: 100vw;
+  height: 100hw;
+  max-height: 100vw;
   text-align: center;
+/*  background-color: #536872;*/
+/*  background-color: #BFBFBF;*/
+  font-family: Arial,Verdana,sans-serif;
+  color: #153643;
+  color: #1D1F29;
+  font-size: 13px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header{
+  background-color:#D9D9D9;
+/*  background-color:#748CB4;*/
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.toolbar, .setting-bar{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
+  width: 100%;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.325);
+}
+
+.toolbar{
+  background-color:#71A8AE;
+/*  background-color:#1C1D28;*/
+  padding: 0 28px 10px 12px;
+}
+
+.setting-bar{
+  background-color:#D9D9D9;
+/*  background-color:#748CB4;*/
+/*  background-color:#57A4FF;*/
+/*  background-color:#DF5858;*/
+  margin-top: 7px;
+  padding: 7px 15px 7px;
+}
+
+.setting-bar .setting{
+  display: flex;
+  align-items: center;
+}
+
+.toolbar__btn {
+  width: 25px;
+  height: 25px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-size: cover;
+  margin-left: 16px;
+  margin-top: 10px;
+}
+
+.brush{
+  background: url("assets/img/brush7.png") no-repeat center center;
+  background-size: contain;
+}
+
+.rect{
+  background: url("assets/img/rect2.png") no-repeat center center;
+  background-size: contain;
+}
+
+.circle{
+  background: url("assets/img/circle2.png") no-repeat center center;
+  background-size: contain;
+}
+
+.eraser{
+  background: url("assets/img/eraser2.png")   no-repeat center center;
+  background-size: contain;
+}
+
+.line{
+  background: url("assets/img/line2.png") no-repeat center center;
+}
+
+#line-width , #stroke-color,
+#fill-color{
+  border:2px solid #B7B7B7;
+  border:2px solid #1D1F29;
+  width:28px;
+  border-radius: 3px;
+  margin: 0px 10px;
+}
+#line-width{
+  width:48px;
+
+}
+
+.undo{
+  background: url("assets/img/undo2.png") no-repeat center center;
+  margin-left: auto ;
+  background-size: contain;
+}
+
+.redo{
+  background: url("assets/img/redo2.png") no-repeat center center;
+  background-size: contain;
+}
+
+.save{
+  background: url("assets/img/save3.png") no-repeat center center;
+  background-size: contain;
+}
+
+.canvas {
+  overflow: auto;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/*  background-color: #536872;*/
+/*  background-color: #173B4A;*/
+  margin: 20px auto 0;
+  padding:10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+canvas{
+  background-color: white;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.325);
 }
