--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,9 @@ html{
   height: 100hw;
   max-height: 100vw;
   text-align: center;
-/*  background-color: #536872;*/
-/*  background-color: #BFBFBF;*/
   font-family: Arial,Verdana,sans-serif;
   color: #153643;
-  color: #1D1F29;
+  color: #5D6964;
   font-size: 13px;
 }
 
@@ -39,6 +37,7 @@ header{
 .toolbar{
   background-color:#71A8AE;
 /*  background-color:#1C1D28;*/
+/*  background-color:#363941;*/
   padding: 0 28px 10px 12px;
 }
 
@@ -49,6 +48,7 @@ header{
 /*  background-color:#DF5858;*/
   margin-top: 7px;
   padding: 7px 15px 7px;
+  border-bottom:2px solid #71A8AE;
 }
 
 .setting-bar .setting{
@@ -93,15 +93,15 @@ header{
 
 #line-width , #stroke-color,
 #fill-color{
-  border:2px solid #B7B7B7;
-  border:2px solid #1D1F29;
+/*  border:2px solid #B7B7B7;*/
+  border:1px solid #5D6964;
   width:28px;
   border-radius: 3px;
   margin: 0px 10px;
 }
+
 #line-width{
   width:48px;
-
 }
 
 .undo{
